<resources>
    <string name="app_name">Android Life Cycle</string>

    <!--Text View label-->
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_b_desp">This is activity B which occupies the complete window. Activity A is paused.
    However, the thread count is incremented.</string>
    <string name="count_label">Thread Counter: </string>
    <string name="dialog_text">This is a simple dialog</string>


    <!--Button label-->
    <string name="activity_label">Start Activity B</string>
    <string name="dialog_label">Dialog</string>
    <string name="close_app">Close</string>
    <string name="finish">Finish B</string>
    <string name="dialog_ok">ok</string>

</resources>
